@@ -38,7 +38,7 @@ function db_op_result ($db, $query, $served_line, $served_page)
         $dberror = str_replace ("'","&#39;", $dberror); // Allows the use of apostrophes.
         if ($db->logging)
         {
-            adminlog($db, "LOG_RAW", $dberror);
+            admin_log($db, "LOG_RAW", $dberror);
         }
 
         return $db->ErrorMsg();
