@@ -412,7 +412,7 @@ if (!is_bool($planetinfo) && $planetinfo != false )
             // Kami Multi Browser Window Attack Fix
             if ($_SESSION['planet_selected'] != $planet_id && $_SESSION['planet_selected'] != '')
             {
-                adminlog($db, 57, "{$ip}|{$playerinfo['ship_id']}|Tried to create a base without clicking on the Planet.");
+                admin_log($db, 57, "{$ip}|{$playerinfo['ship_id']}|Tried to create a base without clicking on the Planet.");
                 echo "You need to Click on the planet first.<br><br>";
                 TEXT_GOTOMAIN ();
                 include './footer.php';
@@ -537,7 +537,7 @@ if (!is_bool($planetinfo) && $planetinfo != false )
             // Kami Multi Browser Window Attack Fix
             if (array_key_exists('planet_selected', $_SESSION) == false || $_SESSION['planet_selected'] != $planet_id)
             {
-                adminlog($db, 57, "{$ip}|{$playerinfo['ship_id']}|Tried to start an attack without clicking on the Planet.");
+                admin_log($db, 57, "{$ip}|{$playerinfo['ship_id']}|Tried to start an attack without clicking on the Planet.");
                 echo "You need to Click on the planet first.<br><br>";
                 TEXT_GOTOMAIN ();
                 include './footer.php';
@@ -584,7 +584,7 @@ if (!is_bool($planetinfo) && $planetinfo != false )
             // Kami Multi Browser Window Attack Fix
             if (array_key_exists('planet_selected', $_SESSION) == false || $_SESSION['planet_selected'] != $planet_id)
             {
-                adminlog($db, 57, "{$ip}|{$playerinfo['ship_id']}|Tried to Attack without clicking on the Planet.");
+                admin_log($db, 57, "{$ip}|{$playerinfo['ship_id']}|Tried to Attack without clicking on the Planet.");
                 echo "You need to Click on the planet first.<br><br>";
                 TEXT_GOTOMAIN ();
                 include './footer.php';
@@ -639,7 +639,7 @@ if (!is_bool($planetinfo) && $planetinfo != false )
             // Kami Multi Browser Window Attack Fix
             if (array_key_exists('planet_selected', $_SESSION) == false || $_SESSION['planet_selected'] != $planet_id)
             {
-                adminlog($db, 57, "{$ip}|{$playerinfo['ship_id']}|Tried to Scan without clicking on the Planet.");
+                admin_log($db, 57, "{$ip}|{$playerinfo['ship_id']}|Tried to Scan without clicking on the Planet.");
                 echo "You need to Click on the planet first.<br><br>";
                 TEXT_GOTOMAIN ();
                 include './footer.php';
