@@ -50,7 +50,7 @@ while (!$tdres->EOF)
             echo "error: ". $db->ErrorMsg() . "<br>\n";
         }
         $detected = (boolean) true;
-        adminlog ($db, 960, "1|{$playerinfo['ship_id']}|{$playerinfo['ship_fighters']}|{$ship_fighters_max}");
+        admin_log ($db, 960, "1|{$playerinfo['ship_id']}|{$playerinfo['ship_fighters']}|{$ship_fighters_max}");
     }
     elseif ($playerinfo['ship_fighters'] < 0)
     {
@@ -63,7 +63,7 @@ while (!$tdres->EOF)
             echo "error: ". $db->ErrorMsg() . "<br>\n";
         }
         $detected = (boolean) true;
-        adminlog ($db, 960, "2|{$playerinfo['ship_id']}|{$playerinfo['ship_fighters']}|0");
+        admin_log ($db, 960, "2|{$playerinfo['ship_id']}|{$playerinfo['ship_fighters']}|0");
     }
 
     // Checking Torpedoes
@@ -78,7 +78,7 @@ while (!$tdres->EOF)
             echo "error: ". $db->ErrorMsg() . "<br>\n";
         }
         $detected = (boolean) true;
-        adminlog ($db, 960, "3|{$playerinfo['ship_id']}|{$playerinfo['ship_fighters']}|{$ship_fighters_max}");
+        admin_log ($db, 960, "3|{$playerinfo['ship_id']}|{$playerinfo['ship_fighters']}|{$ship_fighters_max}");
     }
     elseif ($playerinfo['torps'] < 0)
     {
@@ -90,7 +90,7 @@ while (!$tdres->EOF)
             echo "error: ". $db->ErrorMsg() . "<br>\n";
         }
         $detected = (boolean) true;
-        adminlog ($db, 960, "4|{$playerinfo['ship_id']}|{$playerinfo['ship_fighters']}|0");
+        admin_log ($db, 960, "4|{$playerinfo['ship_id']}|{$playerinfo['ship_fighters']}|0");
     }
 
     // Checking Armor Points
@@ -105,7 +105,7 @@ while (!$tdres->EOF)
             echo "error: ". $db->ErrorMsg() . "<br>\n";
         }
         $detected = (boolean) true;
-        adminlog ($db, 960, "5|{$playerinfo['ship_id']}|{$playerinfo['ship_fighters']}|{$ship_fighters_max}");
+        admin_log ($db, 960, "5|{$playerinfo['ship_id']}|{$playerinfo['ship_fighters']}|{$ship_fighters_max}");
     }
     elseif ($playerinfo['armor_pts'] < 0)
     {
@@ -118,7 +118,7 @@ while (!$tdres->EOF)
             echo "error: ". $db->ErrorMsg() . "<br>\n";
         }
         $detected = (boolean) true;
-        adminlog ($db, 960, "6|{$playerinfo['ship_id']}|{$playerinfo['ship_fighters']}|0");
+        admin_log ($db, 960, "6|{$playerinfo['ship_id']}|{$playerinfo['ship_fighters']}|0");
     }
 
     // Checking Credits
@@ -133,7 +133,7 @@ while (!$tdres->EOF)
             echo "error: ". $db->ErrorMsg() . "<br>\n";
         }
         $detected = (boolean) true;
-        adminlog ($db, 960, "7|{$playerinfo['ship_id']}|{$playerinfo['ship_fighters']}|0");
+        admin_log ($db, 960, "7|{$playerinfo['ship_id']}|{$playerinfo['ship_fighters']}|0");
     }
 
     if ($playerinfo['credits'] > 100000000000000000000)
@@ -147,7 +147,7 @@ while (!$tdres->EOF)
             echo "error: ". $db->ErrorMsg() . "<br>\n";
         }
         $detected = (boolean) true;
-        adminlog ($db, 960, "7|{$playerinfo['ship_id']}|{$playerinfo['ship_fighters']}|0");
+        admin_log ($db, 960, "7|{$playerinfo['ship_id']}|{$playerinfo['ship_fighters']}|0");
     }
 
     $tdres->MoveNext();
@@ -173,7 +173,7 @@ while (!$tdres->EOF)
             echo "error: ". $db->ErrorMsg() . "<br>\n";
         }
         $detected = (boolean) true;
-        adminlog ($db, 960, "10|{$planetinfo['planet_id']}|{$planetinfo['credits']}|{$planetinfo['owner']}");
+        admin_log ($db, 960, "10|{$planetinfo['planet_id']}|{$planetinfo['credits']}|{$planetinfo['owner']}");
     }
 
     if ($planetinfo['credits'] > 100000000000000000000)
@@ -187,7 +187,7 @@ while (!$tdres->EOF)
             echo "error: ". $db->ErrorMsg() . "<br>\n";
         }
         $detected = (boolean) true;
-        adminlog ($db, 960, "10|{$planetinfo['planet_id']}|{$planetinfo['credits']}|{$planetinfo['owner']}");
+        admin_log ($db, 960, "10|{$planetinfo['planet_id']}|{$planetinfo['credits']}|{$planetinfo['owner']}");
     }
 
     // Checking Fighters
@@ -202,7 +202,7 @@ while (!$tdres->EOF)
             echo "error: ". $db->ErrorMsg() . "<br>\n";
         }
         $detected = (boolean) true;
-        adminlog ($db, 960, "11|{$planetinfo['planet_id']}|{$planetinfo['fighters']}|{$planetinfo['owner']}");
+        admin_log ($db, 960, "11|{$planetinfo['planet_id']}|{$planetinfo['fighters']}|{$planetinfo['owner']}");
     }
 
     // Checking Torpedoes
@@ -217,7 +217,7 @@ while (!$tdres->EOF)
             echo "error: ". $db->ErrorMsg() . "<br>\n";
         }
         $detected = (boolean) true;
-        adminlog ($db, 960, "12|{$planetinfo['planet_id']}|{$planetinfo['torps']}|{$planetinfo['owner']}");
+        admin_log ($db, 960, "12|{$planetinfo['planet_id']}|{$planetinfo['torps']}|{$planetinfo['owner']}");
     }
 
 $tdres->MoveNext();
@@ -243,7 +243,7 @@ while (!$tdres->EOF)
             echo "error: ". $db->ErrorMsg() . "<br>\n";
         }
         $detected = (boolean) true;
-        adminlog ($db, 960, "20|{$bankinfo['ship_id']}|{$bankinfo['balance']}");
+        admin_log ($db, 960, "20|{$bankinfo['ship_id']}|{$bankinfo['balance']}");
     }
 
     if ($bankinfo['balance'] > 100000000000000000000)
@@ -257,7 +257,7 @@ while (!$tdres->EOF)
             echo "error: ". $db->ErrorMsg() . "<br>\n";
         }
         $detected = (boolean) true;
-        // adminlog ($db, 960, "20|{$bankinfo['ship_id']}|{$bankinfo['balance']}");
+        // admin_log ($db, 960, "20|{$bankinfo['ship_id']}|{$bankinfo['balance']}");
     }
 
     // Checking IGB Loan Credits
@@ -272,7 +272,7 @@ while (!$tdres->EOF)
             echo "error: ". $db->ErrorMsg() . "<br>\n";
         }
         $detected = (boolean) true;
-        adminlog ($db, 960, "21|{$bankinfo['ship_id']}|{$bankinfo['balance']}");
+        admin_log ($db, 960, "21|{$bankinfo['ship_id']}|{$bankinfo['balance']}");
     }
 
     $tdres->MoveNext();
@@ -297,7 +297,7 @@ while (!$tdres->EOF)
             echo "error: ". $db->ErrorMsg() . "<br>\n";
         }
         $detected = (boolean) true;
-        adminlog ($db, 960, "22|{$transferinfo['transfer_id']}|{$transferinfo['amount']}|{$transferinfo['source_id']}|{$transferinfo['dest_id']}");
+        admin_log ($db, 960, "22|{$transferinfo['transfer_id']}|{$transferinfo['amount']}|{$transferinfo['source_id']}|{$transferinfo['dest_id']}");
     }
     $tdres->MoveNext();
 }
